[workspace]

members = ["runtime", "server", "cli", "graph"]
resolver = "2"
package.rust-version = "1.80.1"

[workspace.dependencies]
url = { version = "2.5.0", features = ["serde", "expose_internals"] }
redb = "2.1.1"
serde = "1.0.208"
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
deno_core = "0.340.0"
deno_error = "0.5.3"
# old rev = "85709c70abb538cf22df73261bc37453e7cb07a7"
# last updated (known working) at rev "a19b3f44d469f96eec8dbde0ba3474841061de0d"
deno_console = { git = "https://github.com/denoland/deno.git" }
deno_webidl = { git = "https://github.com/denoland/deno.git" }
deno_web = { git = "https://github.com/denoland/deno.git" }
deno_crypto = { git = "https://github.com/denoland/deno.git" }
deno_fetch = { git = "https://github.com/denoland/deno.git" }
deno_net = { git = "https://github.com/denoland/deno.git" }
deno_node = { git = "https://github.com/denoland/deno.git" }
deno_url = { git = "https://github.com/denoland/deno.git" }
deno_fs = { git = "https://github.com/denoland/deno.git" }
deno_runtime = { git = "https://github.com/denoland/deno.git" }
deno_permissions = { git = "https://github.com/denoland/deno.git" }
deno_telemetry = { git = "https://github.com/denoland/deno.git" }
deno_ast = { version = "0.46.2", features = ["transpiling"] }
anyhow = "1.0.86"
bincode = "1.3.3"
rust-s3 = { version = "0.35.1", default-features = false, features = [
  "sync",
  "http-credentials",
  "sync-rustls-tls",
] }

futures-util = "0.3.31"
