[package]
name = "cli"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
redb = "2.1.1"
server = { path = "../server" }
cloudstate = { path = "../runtime" }
tokio.workspace = true
axum = "0.7.5"
notify = "6.1.1"
tower = "0.5.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
dhat = "0.3.3"
deno_core.workspace = true
# rand = "0.8.5"


# [features]
# dhat-heap = []
