[package]
name = "cli"
version = "0.1.41"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
redb = "2.1.1"
server = { path = "../server" }
cloudstate = { path = "../runtime" }
tokio.workspace = true
axum = "0.7.5"
notify = "6.1.1"
tower = "0.5.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
dhat = "0.3.3"
deno_core.workspace = true
tracing-flame = "0.2.0"
opentelemetry = "0.26.0"
opentelemetry_sdk = "0.26.0"
opentelemetry-stdout = "0.26.0"
tracing-opentelemetry = "0.27.0"
sentry = "0.34.0"
sentry-tracing = "0.34.0"
dotenv = "0.15.0"
# rand = "0.8.5"


# [features]
# dhat-heap = []
