[package]
name = "cloudstate"
version = "0.1.0"
edition = "2021"

[lib]
name = "cloudstate_runtime"
path = "src/mod.rs"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
deno_console = "0.164.0"
deno_core = "0.299.0"
deno_url = "0.164.0"
deno_webidl = "0.164.0"
redb = "2.1.1"
redis = "0.26.1"
serde = "1.0.208"
tokio = "1.39.2"
url = "2.5.2"
deno_web = "0.195.0"
deno_crypto = "0.178.0"
deno_fetch = "0.188.0"
deno_net = "0.156.0"
