[package]
name = "cloudstate"
version = "0.1.51"
edition = "2021"

[lib]
name = "cloudstate_runtime"
path = "src/lib.rs"


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }

anyhow.workspace = true
bincode.workspace = true

deno_url.workspace = true
deno_console.workspace = true
deno_core.workspace = true
deno_webidl.workspace = true
deno_web.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_net.workspace = true
deno_node.workspace = true
deno_fs.workspace = true
deno_runtime.workspace = true
deno_telemetry.workspace = true
deno_ast.workspace = true

redb.workspace = true
serde.workspace = true

tokio.workspace = true

tracing = "0.1"
url.workspace = true
tracing-subscriber = "0.3.18"
rust-s3.workspace = true
