[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
cloudstate = { path = "../runtime" }
deno_console = "0.164.0"
deno_crypto = "0.178.0"
deno_core = "0.299.0"
deno_webidl = "0.164.0"
deno_url = "0.164.0"
redb = "2.1.1"
tokio = "1.39.3"
deno_web = "0.195.0"
