[package]
version = "0.1.55"
edition = "2021"

name = "server"
[dependencies]
cloudstate = { path = "../runtime" }

anyhow.workspace = true
axum.workspace = true
serde.workspace = true
redb = "2.1.1"
tokio.workspace = true
serde_json = "1.0.127"
tower-http = { version = "0.5.2", features = ["trace"] }
tower = { version = "0.5.0", features = ["util"] }
http-body-util = "0.1.2"
mime = "0.3.17"
tracing = "0.1.40"

deno_url.workspace = true
deno_console.workspace = true
deno_core.workspace = true
deno_webidl.workspace = true
deno_web.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_net.workspace = true
deno_node.workspace = true
deno_fs.workspace = true
deno_runtime.workspace = true
deno_telemetry.workspace = true

tracing-subscriber = "0.3.18"
